--- a/index.html
+++ b/index.html
@@ -12,22 +12,42 @@
 		<link rel="stylesheet" href="./style/style.css">
 		<link rel="stylesheet" href="https://fonts.google.com/?selection.family=Open+Sans">
 
-	</head>
-	<body>
+	<body>	
 		<div class="container">
-			<header>
-				<h1>Relaxr</h1>
-				<h2>Get peace of mind with a single tap</h2>
-				<button>Get it now</button>
-				<h1>Benefits</h1>				
+			<header>Relaxr
+			<p>Get piece of mind with a single tap</p>
+			<button>Get it now</button>
 			</header>
-			<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be</p>
+		</div>
+		<section id="benefits">
+			<header>
+				<h1>Benefits</h1>
+			<p>The perfect personal assistant. Relaxr does your job for you so you 
+			   can enjoy life as it is meant to be.</p>
 			<ul>
-				<li>Schedule meetings for you</li>
-				<li>Excel automation to complete your work for you</li>
-				<li>Responds to emials on your behalf</li>
-				<li>Does all your work for you with our revolutionary AI technology</li>
-
+			   <li>Schedule meetings for you</li>
+			   <li>Excel automation to complete your work for you</li>
+ 		           <li>Responds to email on your behalf</li>
+		    	   <li>Does all your work for you with our revolutionary AI technology</li>
 			</ul>
-			</div>		
-	
+		</section>
+
+		<div class="testimonial">
+			<p>Relaxr changed my life. I've been able<br>
+			   to travel the world, spend limited time<br>
+			   working and my boss keeps thanking<br>
+			   me for crushing work."<br>
+			   -Amanda, Intuit</p>
+			</div>
+
+		<div class="CTA">
+			<button>Sign up now!</button>
+		</div>
+		<div class ="footer">
+			<h1>Relaxr</h1>
+			<h6>Copyright. 2015</h6>
+		</footer>
+
+</body>
+
+</html>	
